--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
+    <style>
+        p {
+            text-align: justify;
+            text-indent: 20px;
+        }
+    </style>
 </head>
 
 <body>
