--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="/_css/estilo.css">
 </head>
-
 <body>
     <div id="interface">
 
@@ -16,7 +13,6 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-
             <img id="icone" src="_imagens/glass-oculos-preto-peq.png" />
             <nav id="menu">
                 <h1>Menu Principal</h1>
@@ -29,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-
+    <section id="corpo">
         <hgroup>
             <h3>Tecnologia > Inovações</h3>
             <h1>Saiba tudo sobre o Google Glass</h1>
@@ -60,12 +56,16 @@
             em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
         <h1>Especificações Técnicas</h1>
-        <p>Tabela Técnica do Google Glass Mar/2013
-
-            Tela:Resolução equivalente a tela de 25"
-            Camera: 5MP para fotos / 720p para vídeos
-            Conectividade: Wi-Fi/ Bluetooth
-            Memória Interna: 12GB</p>
+        <table id="tabelaspec">
+        <caption>Tabela Técnica do Google Glass Mar/2013</caption>
+        <!--Tr significa "Table Row" e Td "Table Data"-->
+            <tr><td>Tela</td><td>Resolução equivalente a tela de 25"</td></tr>
+            <tr><td rowspan="2">Camera</td><td> 5MP para fotos</td></tr>
+            <tr><td>720p para vídeos</td></tr>
+            <tr><td rowspan="2">Conectividade</td> <td>Wi-Fi</td></tr>
+            <tr><td>Bluetooth</td></tr>
+            <tr><td>Memória Interna</td><td> 12GB</td></tr>
+        </table>
 
         <h1>Como funciona</h1>
         <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
@@ -78,7 +78,8 @@
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
         [AQUI ENTRA UM VÍDEO]
-
+    </section>
+    <aside id="lateral">
         <h1>Outras Notícias</h1>
         <h2>Vídeo mais recente</h2>
 
@@ -96,9 +97,11 @@
             pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a
             2,5
             metros de distância do espectador.</p>
-
-        <p>Copyright 2013 - by Gustavo Guanabara
-            Facebook | Twitter</p>
+    </aside>
+    <footer id="rodape">
+        <p>Copyright 2013 - by Gustavo Guanabara <br/>
+            <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a></p>
+    </footer>
     </div>
 </body>
 
