--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
             </nav>
         </header>
     <section id="corpo">
+
+        <article id="noticia-principal">
+        <header id="cabecalho-artigo">
         <hgroup>
             <h3>Tecnologia > Inovações</h3>
             <h1>Saiba tudo sobre o Google Glass</h1>
             <h2>por Gustavo Guanabara</h2>
-            <h3>Atualizado em 23/Abril/2013</h3>
+            <h3 class="direita">Atualizado em 23/Abril/2013</h3>
         </hgroup>
-
+        </header>
         <h2>O que é</h2>
         <p>O <span style="text-decoration: underline" ;>Google Glass</span> é um acessório em forma de óculos que
             possibilita a interação dos usuários com diversos conteúdos
@@ -55,7 +58,7 @@
             disponível
             em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-        <h1>Especificações Técnicas</h1>
+        <h2>Especificações Técnicas</h2>
         <table id="tabelaspec">
         <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
         <!--Tr significa "Table Row" e Td "Table Data"-->
@@ -67,17 +70,18 @@
             <tr><td class="ce">Memória Interna</td><td class="cd"> 12GB</td></tr>
         </table>
 
-        <h1>Como funciona</h1>
+        <h2>Como funciona</h2>
         <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
             superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
             selecionar opções com o movimento da cabeça</p>
 
-        <h1>O que você pode fazer com o Google Glasses</h1>
+        <h2>O que você pode fazer com o Google Glasses</h2>
         <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o
         aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
         [AQUI ENTRA UM VÍDEO]
+    </article>
     </section>
     <aside id="lateral">
         <h1>Outras Notícias</h1>
