--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
         aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-        [AQUI ENTRA UM VÍDEO]
+        <video id="filme" controls="controls" poster="_imagens/video-mini01.jpg" src="_media/one-day.mp4" type="video/mp4">Desculpe, mas não foi possível carregar o vídeo.</video>
+
     </article>
     </section>
     <aside id="lateral">
         <h1>Outras Notícias</h1>
         <h2>Vídeo mais recente</h2>
 
-        [AQUI ENTRA UM VÍDEO]
+        <video id="filme" controls="controls" poster="_imagens/video-mini02.jpg" src="_media/how-it-feels.mp4" type="video/mp4">Desculpe, mas não foi possível carregar o vídeo.</video>
 
         <h1>Novidades no Glass</h1>
         <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
