--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="/_css/estilo.css">
+    <link rel="stylesheet" href="/_css/form.css">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
+
 <body>
     <div id="interface">
 
@@ -18,53 +21,84 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fale-conosco.html">Fale
+                            conosco</a></li>
                 </ul>
             </nav>
         </header>
+        <section id="corpo">
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Fale Conosco > Contato</h3>
+                        <h1>Formulário de Contato</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
+                <!--Label é uma etiqueta para referenciar outra tag através do ID, nesse caso ao clicar no texto, é marcado então o botão do "rádio"-->
+                <form action="">
+                    <fieldset id="usuario">
+                        <legend>Identificação do Usuário</legend>
+                        <p><label for="cNome">Nome:</label><input type="text" nome="tNome" id="cNome" size="40"
+                                maxlength="30" placeholder="Nome Completo" /></p>
+                        <p><label for="cSenha">Senha:</label><input type="password" nome="tSenha" id="cSenha" size="8"
+                                maxlength="8" placeholder="8 digitos"></p>
+                        <p><label for="cEmail">E-mail:</label><input type="email" name="tEmail" id="cEmail" size="20"
+                                maxlength="40" placeholder="anasilva@email.com"></p>
+                        <fieldset>
+                            <legend>Sexo</legend>
+                            <input type="radio" name="tSexo" id="cMasc"> <label for="cMasc">Masculino</label><br />
+                            <input type="radio" name="tSexo" id="CFem"> <label for="CFem">Feminino</label>
+                        </fieldset>
+                        <p><label for="cNasc">Data de Nascimento:</label><input type="date" name="tNasc" id="cNasc"></p>
+                    </fieldset>
+                    <fieldset id="endereco">
+                        <legend>Endereço do Usuário</legend>
+                        <p><label for="cRua">Logradouro:</label><input type="text" name="tRua" id="cRua" size="13"
+                                maxlength="80" placeholder="Rua / Av / Travessa"></p>
+                        <p><label for="cNum">Número:</label><input type="number" name="nNum" id="cNum" min="0"
+                                max="99999" placeholder="1081"></p>
+                        <p><label for="cEst">Estado:</label><input type="text" name="tEst" id="cEst" size="13"
+                                maxlength="80" placeholder="SP / BA / MG"></p>
+                        <p><label for="cCid">Cidade:</label><input type="text" name="tCid" id="cCid" size="40"
+                                maxlength="80" placeholder="Curitiba / Ribeirão Preto"></p>
+                    </fieldset>
+                    <fieldset id="mensagem">
+                        <legend>Mensagem do Usuário</legend>
+                        <p>Grau de Urgência:</p>
+                        <p>Mensagem:</p>
+                    </fieldset>
+                    <fieldset id="pedido">
+                        <legend>Quero um Google Glass</legend>
+                        <p>Gostaria de adquirir um Google Glass quando disponível</p>
+                        <p>Cor: <input type="text" name="tCor" id="cCor" size="20" maxlength="30"></p>
+                        <p>Quantidade:</p>
+                        <p>Preço Total: R$</p>
+                    </fieldset>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
-
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
-
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
-
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
-
-
-[BOTÃO ENVIAR]
-
-<footer id="rodape">
-    <p>Copyright 2013 - by Gustavo Guanabara <br/>
-        <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a></p>
-</footer>
-</div>
+                    [BOTÃO ENVIAR]
+                </form>
+            </article>
+        </section>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara <br />
+                <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | <a
+                    href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
+            </p>
+        </footer>
+    </div>
 </body>
 
 </html>
