--- a/multimidia.html
+++ b/multimidia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/_css/media.css">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
+
 <body>
     <div id="interface">
 
@@ -19,36 +21,47 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
+                        <a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
         <section id="corpo-full">
 
             <article id="noticia-principal">
-            <header id="cabecalho-artigo">
-            <hgroup>
-                <h3>Glass > Multimídia</h3>
-                <h1>Sons e Vídeos</h1>
-                <h2>por Gustavo Guanabara</h2>
-                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-            </hgroup>
-            </header>
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Multimídia</h3>
+                        <h1>Sons e Vídeos</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
 
                 <div id="tv-radio">
-                    <audio id="musica" controls="controls" src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"> Desculpe, mas não foi possível carregar o áudio.</audio>
-                    <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg" src="_media/getting-started.mp4" type="video/mp4">Desculpe, mas não foi possível carregar o vídeo.</video>
+                    <audio id="musica" controls="controls" src="_media/2009-lovers-carvings-bibio.mp3"
+                        type="audio/mpeg"> Desculpe, mas não foi possível carregar o áudio.</audio>
+                    <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg"
+                        src="_media/getting-started.mp4" type="video/mp4">Desculpe, mas não foi possível carregar o
+                        vídeo.</video>
                 </div>
             </article>
         </section>
-<footer id="rodape">
-    <p>Copyright 2013 - by Gustavo Guanabara <br/>
-        <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a></p>
-</footer>
-</div>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara <br />
+                <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | <a
+                    href="http://twitter.com/cursosemvideo" target="_blank">Twitter</a>
+            </p>
+        </footer>
+    </div>
 </body>
+
 </html>
