Pequenos ajustes nos vídeos

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o
         clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-                <video id="filme" controls="controls" poster="_imagens/video-mini01.jpg" src="_media/one-day.mp4"
+                <video id="filme1" controls="controls" poster="_imagens/video-mini01.jpg" src="_media/one-day.mp4"
                     type="video/mp4">Desculpe, mas não foi possível carregar o vídeo.</video>
 
             </article>
@@ -121,7 +121,7 @@
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente</h2>
 
-            <video id="filme" controls="controls" poster="_imagens/video-mini02.jpg" src="_media/how-it-feels.mp4"
+            <video id="filme2" controls="controls" poster="_imagens/video-mini02.jpg" src="_media/how-it-feels.mp4"
                 type="video/mp4">Desculpe, mas não foi possível carregar o vídeo.</video>
 
             <h1>Novidades no Glass</h1>
